--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha",
     "build-css": "node-sass --include-path scss scss/main.scss   public/css/styles.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
